// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuperTimer render renders active state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardContent-root-29"
  >
    <p
      className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiTypography-gutterBottom-57"
    >
      Total: 
      00:00:00
    </p>
    <span>
      0
      :
      00
      :
      00
      :
      00
    </span>
  </div>
  <div
    className="MuiCardActions-root-66"
  >
    <button
      className="MuiButtonBase-root-95 MuiButtonBase-disabled-96 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiButton-disabled-89 MuiCardActions-action-68"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-70"
      >
        Start
      </span>
    </button>
  </div>
</div>
`;

exports[`SuperTimer render renders complete state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardContent-root-29"
  >
    <p
      className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiTypography-gutterBottom-57"
    >
      Total: 
      00:00:00
    </p>
    <p>
      All done!
    </p>
  </div>
  <div
    className="MuiCardActions-root-66"
  >
    <button
      className="MuiButtonBase-root-95 MuiButtonBase-disabled-96 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiButton-disabled-89 MuiCardActions-action-68"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-70"
      >
        Start
      </span>
    </button>
  </div>
</div>
`;

exports[`SuperTimer render renders default state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardContent-root-29"
  >
    <p
      className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiTypography-gutterBottom-57"
    >
      Total: 
      00:00:00
    </p>
  </div>
  <div
    className="MuiCardActions-root-66"
  >
    <button
      className="MuiButtonBase-root-95 MuiButtonBase-disabled-96 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiButton-disabled-89 MuiCardActions-action-68"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="submit"
    >
      <span
        className="MuiButton-label-70"
      >
        Start
      </span>
    </button>
  </div>
</div>
`;

exports[`SuperTimer render renders duration state 1`] = `
<div
  className="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
>
  <div
    className="MuiCardContent-root-29"
  >
    <p
      className="MuiTypography-root-30 MuiTypography-body1-39 MuiTypography-colorTextSecondary-63 MuiTypography-gutterBottom-57"
    >
      Total: 
      00:00:01
    </p>
  </div>
  <div
    className="MuiCardActions-root-66"
  >
    <button
      className="MuiButtonBase-root-95 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiCardActions-action-68"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-70"
      >
        Start
      </span>
      <span
        className="MuiTouchRipple-root-98"
      />
    </button>
  </div>
</div>
`;
